--- a/Syncr/sync/templates/sync/index.html
+++ b/Syncr/sync/templates/sync/index.html
@@ -10,7 +10,7 @@
 <div hx-get="{% url 'sync:indexStats' %}" hx-trigger="every 5s, load"></div>
 <div hx-get="{% url 'sync:indexStatsCharts' %}" hx-trigger="load"></div>
 
-<div class="flex justify-between items-center mt-2 dark:bg-gray-700 px-2">
+<div id="runningJobsList" class="flex justify-between items-center mt-2 dark:bg-gray-700 px-2">
     <div>
         <h1 class="text-2xl font-bold dark:text-gray-200 mt-2">
             Running Jobs
@@ -21,7 +21,7 @@
         <a href="{% url 'sync:runJob' %}" class="p-2 text-gray-900 dark:text-white bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-300 dark:hover:bg-gray-700">Run Manual Job</a>
     </div>
 </div>
-<div hx-get="{% url 'sync:runningJobs' %}" hx-trigger="every 5s, load"></div>
+<divhx-get="{% url 'sync:runningJobs' %}" hx-trigger="every 5s, load"></div>
 
 
 <div class="flex justify-between items-center mt-2 dark:bg-gray-700 px-2">
