--- a/Syncr/sync/templates/sync/jobCreate.html
+++ b/Syncr/sync/templates/sync/jobCreate.html
@@ -1,24 +1,56 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="" method="post" class="max-w-sm mx-auto">
+<form action="" method="post" class="max-w-xl mx-auto">
     {% csrf_token %}
     <div>
         <label for="{{ form.type.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ form.type.label }}</label>
         {{ form.type }}
     </div>
-    <div>
-        <label for="{{ form.srcFs.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ form.srcFs.label }}</label>
-        {{ form.srcFs }}
+    <h1 class="block mt-2 text-gray-900 dark:text-white">Source filesystem</h1>
+    <div class="grid grid-cols-3 gap-2">
+        {% for choice in form.srcFs %}
+            {% with srcFs=choice.data.attrs.remote %}
+            <label class="bg-gray-50 border border-gray-300 text-gray-900 text-sm block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
+            hover:cursor-pointer dark:hover:bg-gray-800 dark:has-checked:bg-blue-500">
+                    <input 
+                        type="radio" 
+                        class="hidden" 
+                        name="{{ form.srcFs.name }}" 
+                        value="{{ choice.data.value }}"
+                    >
+                    <div class="flex flex-col">
+                        <span class="font-medium">{{ srcFs.type }} - {{ srcFs.name }}</span>
+                    </div>
+                </label>
+            {% endwith %}
+        {% endfor %}
     </div>
-    <div>
-        <label for="{{ form.dstFs.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ form.dstFs.label }}</label>
-        {{ form.dstFs }}
+    
+    <h1 class="block mt-2 text-gray-900 dark:text-white">Destination Filesystem</h1>
+    <div class="grid grid-cols-3 gap-2">
+        {% for choice in form.dstFs %}
+            {% with dstFs=choice.data.attrs.remote %}
+                <label class="bg-gray-50 border border-gray-300 text-gray-900 text-sm block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
+                    hover:cursor-pointer dark:hover:bg-gray-800 dark:has-checked:bg-blue-500">
+                    <input 
+                        type="radio" 
+                        class="hidden" 
+                        name="{{ form.dstFs.name }}" 
+                        value="{{ choice.data.value }}"
+                    >
+                    <div class="flex flex-col">
+                        <span class="font-medium">{{ dstFs.type }} - {{ dstFs.name }}</span>
+                    </div>
+                </label>
+            {% endwith %}
+        {% endfor %}
     </div>
     <div>
         <label for="{{ form.server.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ form.server.label }}</label>
         {{ form.server }}
     </div>
-    <button type="submit" class="mt-2 hover:cursor-pointer text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Run Job</button>
+    <button type="submit" class="mt-2 hover:cursor-pointer text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Run Job</button>
 </form>
+
 {% endblock content %}
