--- a/Syncr/sync/templates/sync/jobCreate.html
+++ b/Syncr/sync/templates/sync/jobCreate.html
@@ -42,6 +42,10 @@
             {% endwith %}
         {% endfor %}
     </div>
+    <div class="flex items-center gap-2 mt-2">
+        <p class="block mb-2 text-gray-900 dark:text-white">Path: </p>
+        {{form.srcFsPath}}
+    </div>
     
     <h1 class="block mt-2 text-xl text-gray-900 dark:text-white mt-8">Destination Filesystem</h1>
     <p class="block mb-2 text-gray-900 dark:text-gray-300">The destination remote from where the files will be pushed</p>
@@ -63,6 +67,10 @@
             {% endwith %}
         {% endfor %}
     </div>
+    <div class="flex items-center gap-2 mt-2">
+        <p class="block mb-2 text-gray-900 dark:text-white">Path: </p>
+        {{form.dstFsPath}}
+    </div>
 
 
     <div class="mt-8">
@@ -71,7 +79,7 @@
         {{ form.server }}
     </div>
 
-    
+
     <button name="submit" class="mt-2 rounded-lg hover:cursor-pointer text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Run Job</button>
 </form>
 
