Added error output

--- a/Syncr/sync/templates/sync/ajax/jobQuery.html
+++ b/Syncr/sync/templates/sync/ajax/jobQuery.html
@@ -97,6 +97,7 @@
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Errors: {{job.errors}}</h3>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Fatal Error: {{job.fatalError}}</h3>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{{job.output}}</h3>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{{job.error}}</h3>
         </blockquote>   
     </figure>
 </div>
