--- a/Syncr/sync/templates/sync/jobCreate.html
+++ b/Syncr/sync/templates/sync/jobCreate.html
@@ -4,8 +4,8 @@
 {% block content %}
 <form action="" method="post" class="max-w-xl mx-auto">
     {% csrf_token %}
-    <h1 class="block mt-2 text-xl text-gray-900 dark:text-white">Schedule Type</h1>
-    <p class="block mb-2 text-gray-900 dark:text-gray-300">Choose the type of your schedule, this will define what it wil do when triggered by the cron frequency</p>
+    <h1 class="block mt-2 text-xl text-gray-900 dark:text-white">Job Type</h1>
+    <p class="block mb-2 text-gray-900 dark:text-gray-300">Choose the type of your job</p>
     <div class="grid grid-cols-3 gap-2">
         {% for choice in form.type %}
         <label class="bg-gray-50 rounded-lg border border-gray-300 text-gray-900 text-sm block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
@@ -17,7 +17,8 @@
                     value="{{ choice.data.value }}"
                 >
                 <div class="flex flex-col">
-                    <span class="font-medium">{{choice.data.label}}</span>
+                    <span class="font-bold">{{choice.data.label}}</span>
+                    <span class="dark:text-gray-300">{{choice.data.attrs.description}}</span>
                 </div>
             </label>
         {% endfor %}
