Change css of descriptions

--- a/Syncr/sync/templates/sync/remote.html
+++ b/Syncr/sync/templates/sync/remote.html
@@ -6,7 +6,7 @@
         <h1 class="text-2xl font-bold dark:text-gray-200 mt-2">
             Remotes
         </h1>
-        <p class="block mb-2 text-gray-900 dark:text-gray-300">Filesystems from a different number of providers and protocols</p>
+        <p class="mt-1 text-sm font-normal text-gray-500 dark:text-gray-400">Filesystems from a different number of providers and protocols</p>
         {% comment %} <p class="mt-1 text-sm font-normal text-gray-500 dark:text-gray-400">Only the last 20 entries are shown here</p> {% endcomment %}
     </div>
     <div>
@@ -21,7 +21,7 @@
         <h1 class="text-2xl font-bold dark:text-gray-200 mt-2">
             Unions
         </h1>
-        <p class="block mb-2 text-gray-900 dark:text-gray-300">Collection of remotes and can act as one singular filesystem</p>
+        <p class="mt-1 text-sm font-normal text-gray-500 dark:text-gray-400">Collection of remotes and can act as one singular filesystem</p>
         {% comment %} <p class="mt-1 text-sm font-normal text-gray-500 dark:text-gray-400">Only the last 20 entries are shown here</p> {% endcomment %}
     </div>
     <div>
