--- a/Syncr/sync/templates/sync/ajax/jobQuery.html
+++ b/Syncr/sync/templates/sync/ajax/jobQuery.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 <div class="grid grid-cols-1 md:grid-cols-3 mb-4 gap-x-4 gap-y-4">
-    <figure class="col-span-3 flex flex-col p-2 bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+    <figure class="rounded-lg col-span-3 flex flex-col p-2 bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mb-2 text-gray-500 dark:text-gray-400">
             <div>
                 <h3 class="mb-2 text-lg font-semibold text-gray-900 dark:text-white">Job {{ job.id }} - {{ job.type }} - {{ job.schedule.name|default:"Manual" }} ({{ job.startTime|date:"d/m/y H:i" }})</h3>
@@ -63,7 +63,7 @@
         </blockquote>   
     </figure>
 
-    <figure class="flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+    <figure class="rounded-lg flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
             <p class="my-2">Transfers</p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
@@ -88,7 +88,7 @@
             {% endif %}
         </blockquote>   
     </figure>
-    <figure class="flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+    <figure class="rounded-lg flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
             <p class="my-2">Changes</p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Renames: {{job.renames}}</h3>
@@ -96,7 +96,7 @@
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Deleted dirs: {{job.deletedDirs}}</h3>
         </blockquote>   
     </figure>
-    <figure class="flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+    <figure class="rounded-lg flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
             <p class="my-2">Errors</p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Errors: {{job.errors}}</h3>
@@ -106,7 +106,7 @@
         </blockquote>   
     </figure>
 
-    <figure class="col-span-3 flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+    <figure class="rounded-lg col-span-3 flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
             <p class="my-2">Options</p>
             <div class="grid grid-cols-6">
