--- a/Syncr/sync/templates/sync/remote.html
+++ b/Syncr/sync/templates/sync/remote.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="flex justify-between items-center mt-2 dark:bg-gray-700 p-2">
+<div class="rounded-t-lg flex justify-between items-center mt-2 dark:bg-gray-700 p-2">
     <div>
         <h1 class="text-2xl font-bold dark:text-gray-200 mt-2">
             Remotes
@@ -60,7 +60,7 @@
 {% endif %}
 
 
-<div class="flex justify-between items-center mt-2 dark:bg-gray-700 p-2">
+<div class="rounded-t-lg flex justify-between items-center mt-2 dark:bg-gray-700 p-2">
     <div>
         <h1 class="text-2xl font-bold dark:text-gray-200 mt-2">
             Unions
