--- a/Syncr/sync/templates/sync/schedule.html
+++ b/Syncr/sync/templates/sync/schedule.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="flex justify-between items-center mt-2 dark:bg-gray-700 p-2">
+<div class="rounded-t-lg flex justify-between items-center mt-2 dark:bg-gray-700 p-2">
     <div>
         <h1 class="text-2xl font-bold dark:text-gray-200 mt-2">
             Schedules
